update the page

--- a/start.html
+++ b/start.html
@@ -51,7 +51,7 @@
     </ul>
 
     <main>
-      This is the main content of the page
+      <p>This is the main content of the page</p>
 
       <section>
         <h3>Inside the body there are some sections.</h3>
@@ -59,22 +59,18 @@
       </section>
 
       <section>
-        This is a superscript text: <sup>text</sup>
-        <br />
-        This is a subscript text: <sub>text</sub>
+        <p>This is a superscript text: <sup>text</sup></p>
+        <p>This is a subscript text: <sub>text</sub></p>
       </section>
 
       <section>
-        This is an emphasized text: <em>text</em>
-        <br />
-        This is a bold text: <strong> text</strong>
+        <p>This is an emphasized text: <em>text</em></p>
+        <p>This is a bold text: <strong> text</strong></p>
       </section>
     </main>
 
     <footer>
-      <br />
-      <strong>This is the end of the page</strong>
-      <br />
+      <p><strong>This is the end of the page</strong></p>
       <p>This a paragraph.</p>
     </footer>
   </body>
