feat : add a field set and legend as a best practice for more readable content

--- a/start.html
+++ b/start.html
@@ -20,6 +20,8 @@
       <h1>My Form exercise</h1>
       <section class="Form-section">
         <form action="">
+          <fieldset >
+            <legend>Your Personal information :</legend>
           <label for="e-mail"
             >E-Mail :
             <abbr title="required">*</abbr>
@@ -75,6 +77,10 @@
             maxlength="13"
             placeholder="E.g +393501320546"
           />
+        </fieldset>
+        <br>
+        <fieldset>
+          <legend>Choose a Plan :</legend>
           <label for="plan-selected"
             >Choose your plan :
             <abbr title="required">*</abbr>
@@ -94,7 +100,10 @@
             id="pro-plan"
             value="Activated"
           />
-
+        </fieldset>
+        <br>
+        <fieldset>
+          <legend>Payment Details : </legend>
           <label for="credit-card-number"
             >Your Credit card number :
             <abbr title="required">*</abbr>
@@ -146,6 +155,7 @@
             required
             placeholder="E.g. Street example n. 5"
           />
+        </fieldset>
         </form>
       </section>
     </main>
