fix: updating page and fixing some problems

--- a/blog-page.html
+++ b/blog-page.html
@@ -59,61 +59,62 @@
             >Mario D'Andrea</span
           >
         </h2>
+        <hr />
       </div>
     </header>
     <main>
       <article>
         <section>
           <div>
-            <img
-              srcset="
-                html-code.jpg 1920w,
-                html-code.jpg  980w,
-                html-code.jpg  480w,
-                html-code.jpg  240w
-              "
-              sizes="(max-width : 600px)100vw"
-              src="html-code.jpg"
-              alt="A bunch of html code"
-            />
             <div>
               <h3>Article Title 1</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elite. neque
-                ut aperiam esse provident? Nihil exercitationem la doloribus
-                animi rem, quaerat ipsam doloremque earum,natu reiciendis neque
-                repudiandae commodi iste? Enim cupidita dolor, dignissimo
-                repudiandae atque modi adipisci ipsume consectetur. Neque cumque
-                error cupiditate, dolores alia voluptatum libero tempore
-                laudantium quidem, ab omnisert est et veritatis eum iste! Harum
-                iusto velit minima unde sapiente. Consequatur ips similique unde
-                temporibus odi nulla magni aspernatur sint neque ea saepe
-                deleniti ill adipisci! Neque fugit quis haru voluptas? Eum
-                distincti temporibus velit minus quo, quasi haru recusandae
-                volup quod aperiam esse minima nesciunt rerum praesentium ven
-                incidunt similique animi autem! Mollitia alias voluptat
-                necessitatibus, sapiente doloremque expedita eligendise
-                distinctio!necessitatibus, sapiente doloremque expedita Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. fugit enim,
-                repellendus odit exercitationem explicabo al saepe asperiores
-                accusamus voluptates. Nisi consequaturt iusto nulla possimus
-                temporibus assumenda praesentium do saepe adipisci rerum
-                temporibus magnam! Tempore accusamu labore ratione, quod eveniet
-                voluptatum iusto vero verit consectetur nulla repellat optio,
-                rerum quasi est id vol fugit laudantium. Velit? Blanditiis
-                necessitatibus rerum tempora suscipit, maxime consequuntur saepe
-                ducimus magni laudantium sunt rem voluptatibus. Omnis, magni.
-                Accusantiu repellendus dolorem veniam necessitatibus quia
-                aperiam non quaerat, cupiditate atque sit exercitationem. Nemo
-                tempore corporis. Laboriosam sapiente blanditiis aperiam quod
-                totam officiis, nemo dolorem cupiditate omnis aspernatur cum
-                perf neque accusamus. Vero, eligendi. Error nemo obcaecati
-                impert inventore pariatur eius doloremque. Sint rem perferendis
-                eaq Placeat modi assumenda optio architecto enim id quae dolor e
-                Animi, architecto, necessitatibus et nisi molestiae rerum rep
-                autem consequuntur vero esse, doloremque ducimus quis iusto??
-              </p>
+              <img
+                srcset="
+                  html-code.jpg    1920w,
+                  html-code-2x.jpg  980w,
+                  html-code-3x.jpg  480w,
+                  html-code-4x.jpg  240w
+                "
+                sizes="(max-width : 600px)100vw,50vw"
+                src="html-code.jpg"
+                alt="A bunch of html code"
+              />
             </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elite. neque ut
+              aperiam esse provident? Nihil exercitationem la doloribus animi
+              rem, quaerat ipsam doloremque earum,natu reiciendis neque
+              repudiandae commodi iste? Enim cupidita dolor, dignissimo
+              repudiandae atque modi adipisci ipsume consectetur. Neque cumque
+              error cupiditate, dolores alia voluptatum libero tempore
+              laudantium quidem, ab omnisert est et veritatis eum iste! Harum
+              iusto velit minima unde sapiente. Consequatur ips similique unde
+              temporibus odi nulla magni aspernatur sint neque ea saepe deleniti
+              ill adipisci! Neque fugit quis haru voluptas? Eum distincti
+              temporibus velit minus quo, quasi haru recusandae volup quod
+              aperiam esse minima nesciunt rerum praesentium ven incidunt
+              similique animi autem! Mollitia alias voluptat necessitatibus,
+              sapiente doloremque expedita eligendise distinctio!necessitatibus,
+              sapiente doloremque expedita Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. fugit enim, repellendus odit
+              exercitationem explicabo al saepe asperiores accusamus voluptates.
+              Nisi consequaturt iusto nulla possimus temporibus assumenda
+              praesentium do saepe adipisci rerum temporibus magnam! Tempore
+              accusamu labore ratione, quod eveniet voluptatum iusto vero verit
+              consectetur nulla repellat optio, rerum quasi est id vol fugit
+              laudantium. Velit? Blanditiis necessitatibus rerum tempora
+              suscipit, maxime consequuntur saepe ducimus magni laudantium sunt
+              rem voluptatibus. Omnis, magni. Accusantiu repellendus dolorem
+              veniam necessitatibus quia aperiam non quaerat, cupiditate atque
+              sit exercitationem. Nemo tempore corporis. Laboriosam sapiente
+              blanditiis aperiam quod totam officiis, nemo dolorem cupiditate
+              omnis aspernatur cum perf neque accusamus. Vero, eligendi. Error
+              nemo obcaecati impert inventore pariatur eius doloremque. Sint rem
+              perferendis eaq Placeat modi assumenda optio architecto enim id
+              quae dolor e Animi, architecto, necessitatibus et nisi molestiae
+              rerum rep autem consequuntur vero esse, doloremque ducimus quis
+              iusto??
+            </p>
           </div>
         </section>
       </article>
@@ -122,25 +123,17 @@
         <section>
           <div>
             <h3>Article Title 2</h3>
-            <figure>
-              <figcaption>
-                I'm doing my job with love for create awesome website!
-              </figcaption>
-              <picture>
-                <source
-                  media="(min-width: 768px)"
-                  srcset="
-                    web-development.jpg    1920w,
-                    web-development-2x.jpg  960w
-                  "
-                />
-                <source srcset="web-development-mobile.jpg" />
-                <img
-                  src="web-development.jpg"
-                  alt="while working as a  web developer"
-                />
-              </picture>
-            </figure>
+            <img
+              srcset="
+                web-development.jpg    1920w,
+                web-development-2x.jpg  960w,
+                web-development-3x.jpg  480w,
+                web-development-4x.jpg  240w
+              "
+              sizes="(min-width: 600px)50vw,100vw"
+              src="web-development.jpg"
+              alt="working as a web developer while coding"
+            />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elite. neque ut
               aperiam esse provident? Nihil exercitationem la doloribus animi
