feat : updated card exercise

--- a/card.html
+++ b/card.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <h1>Card exercise</h1>
       <article class="main-content">
         <section class="article-img-content">
           <div>
@@ -16,8 +17,7 @@
               src="computer.png"
               alt="A laptop for programming with a beautiful colored background"
             />
-            <h1>Web development</h1>
-
+            <h2>Web development the art of creating website!</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
             </p>
@@ -33,23 +33,31 @@
             </p>
           </div>
         </section>
-        <section class="item3x-link">
+        <section>
           <div>
-            <ul>
-              <div>
-                <li><p>An Item</p></li>
-              </div>
-              <div>
-                <li><p>A second Item</p></li>
-              </div>
-              <div>
-                <li><p>A Third Item</p></li>
-              </div>
-            </ul>
+            <article>
+              <h3>Html</h3>
+              <p>Html is used for create skeleton of our page</p>
+            </article>
+          </div>
+          <div>
+            <article>
+              <h3>CSS</h3>
+              <p>CSS is used for stylize our page as like as we want</p>
+            </article>
+          </div>
+          <div>
+            <article>
+              <h3>JavaScript</h3>
+              <p>
+                JavaScript is used for the functionality of our page and for
+                interactivity
+              </p>
+            </article>
           </div>
           <div class="link-item">
-            <a href="#">Card Link</a>
-            <a href="#">Another Link</a>
+            <a href="mailto:mariodandrea2595@gmail.com">Contact Me</a>
+            <a href="https://www.develhope.co">Learn Programming</a>
           </div>
         </section>
       </article>
